#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([FULL-PACKAGE-NAME],[VERSION],[BUG-REPORT-ADDRESS])

AC_CONFIG_SRCDIR([UnitTest.cpp])
#AC_CONFIG_HEADER([config.h])
AC_PROG_MAKE_SET

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
AC_PROG_RANLIB
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.

AC_CONFIG_FILES([Makefile ])
AC_OUTPUT
